--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.save filter=lfs diff=lfs merge=lfs -text
 df.csv filter=lfs diff=lfs merge=lfs -text
+df_anonymized.csv filter=lfs diff=lfs merge=lfs -text
